--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             // **********************************************
 
             // Replace <Subscription Key> with your valid subscription key.
-            var subscriptionKey = "ded58c5a1ac1485ea2efaef4fae57958";
+            var subscriptionKey = "1ff34cd21fce4ca2a0d10220544fa88f";
 
             // You must use the same Azure region in your REST API method as you used to
             // get your subscription keys. For example, if you got your subscription keys
@@ -77,7 +77,7 @@
     <br><br>
     Image to analyze:
     <input type="text" name="inputImage" id="inputImage"
-        value="https://arifbudiman.blob.core.windows.net/images/Dicoding.png" />
+        value="https://adryanevstorage.blob.core.windows.net/blockblobsfwwqms/1543035822545341.jpg" />
     <button onclick="processImage()">Analyze image</button>
     <br><br>
     <div id="wrapper" style="width:1020px; display:table;">
